--- a/less/bootstrap/carousel.less
+++ b/less/bootstrap/carousel.less
@@ -70,7 +70,7 @@
 
 .carousel-control {
   position: absolute;
-  top: 40%;
+  top: 42px; //40%;  Set a hardcoded number as a percentage causes the nav to jump
   left: 15px;
   width: 40px;
   height: 40px;
