--- a/less/make/home.less
+++ b/less/make/home.less
@@ -138,7 +138,7 @@
 			color: #5ebcf7;
 		}
 		.carousel-control {
-			top:50%;
+			top:42px; // Set a hardcoded number as the height causes the nav buttons to jump.
 			background:#00476b;
 			border:1px solid #00324b;
 			font-size:72px;
